given validation to the password and email

--- a/src/app/user-signup/user-signup.component.html
+++ b/src/app/user-signup/user-signup.component.html
@@ -4,24 +4,24 @@
         <body class="form-group flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
             <div class="sm:mx-auto sm:w-full sm:max-w-sm">
                 <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
-                    alt="Your Company"/>
+                    alt="Your Company" />
                 <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Personal
                     Information</h2>
 
                 <div class="form-group mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
                     <div class="sm:col-span-3">
-                        <label for="first-name" class="block text-sm font-medium leading-6 text-gray-900">First
+                        <label for="firstName" class="block text-sm font-medium leading-6 text-gray-900">First
                             name</label>
                         <div class="mt-2">
-                            <input type="text" formControlname="first-name" id="first-name" autocomplete="given-name"
+                            <input type="text" formControlname="firstName" id="firstName" autocomplete="given-name"
                                 placeholder="First Name (required)"
                                 class="form-control block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-                                [ngClass]="{'is-invalid': (userForm.get('first-name')?.touched || userForm.get('first-name')?.dirty) && !userForm.get('first-name')?.valid }" />
+                                [ngClass]="{'is-invalid': (userForm.get('firstName')?.touched || userForm.get('firstName')?.dirty) && !userForm.get('firstName')?.valid }" />
                             <span class="invalid-feedback">
-                                <span *ngIf="userForm.get('first-name')?.errors?.['required']">
+                                <span *ngIf="userForm.get('firstName')?.errors?.['required']">
                                     Please enter your first name.
                                 </span>
-                                <span *ngIf="userForm.get('first-name')?.errors?.['minlength']">
+                                <span *ngIf="userForm.get('firstName')?.errors?.['minlength']">
                                     The first name must be longer than 3 characters.
                                 </span>
                             </span>
@@ -29,18 +29,18 @@
                     </div>
 
                     <div class="form-group col-span-3">
-                        <label for="last-name" class="block text-sm font-medium leading-6 text-gray-900">Last
+                        <label for="lastName" class="block text-sm font-medium leading-6 text-gray-900">Last
                             name</label>
                         <div class="mt-2">
-                            <input type="text" formControlname="last-name" id="last-name" autocomplete="family-name"
+                            <input type="text" formControlname="lastName" id="last-name" autocomplete="family-name"
                                 placeholder="Last Name (required)"
                                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-                                [ngClass]="{'is-invalid': (userForm.get('last-name')?.touched || userForm.get('last-name')?.dirty) && !userForm.get('last-name')?.valid }" />
+                                [ngClass]="{'is-invalid': (userForm.get('lastName')?.touched || userForm.get('lastName')?.dirty) && !userForm.get('lastName')?.valid }" />
                             <span class="invalid-feedback">
-                                <span *ngIf="userForm.get('last-name')?.errors?.['required']">
+                                <span *ngIf="userForm.get('lastName')?.errors?.['required']">
                                     Please enter your first name.
                                 </span>
-                                <span *ngIf="userForm.get('last-name')?.errors?.['minlength']">
+                                <span *ngIf="userForm.get('lastName')?.errors?.['minlength']">
                                     The first name must be longer than 3 characters.
                                 </span>
                             </span>
@@ -54,9 +54,51 @@
                             <input id="email" type="email" autocomplete="email" placeholder="Email (required)"
                                 formControlName="email"
                                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-                                [ngClass]="{'is-invalid': emailMessage}" />
+                                [ngClass]="{'is-invalid':  (userForm.get('email')?.touched || userForm.get('email')?.dirty) && !userForm.get('email')?.valid }" />
                             <span class="invalid-feedback">
-                                {{emailMessage}}
+                                <span *ngIf="userForm.get('email')?.errors?.['required']">
+                                    Please enter your Email address
+                                </span>
+                                <span *ngIf="userForm.get('email')?.errors?.['email']">
+                                    Please enter a vaild Email address
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+
+
+                    <div class="form-group sm:col-span-3">
+                        <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Password</label>
+                        <div class="mt-2">
+                            <input id="password" type="password" autocomplete="password"
+                                placeholder="Password (required)" formControlName="password"
+                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                                [ngClass]="{'is-invalid': userForm.get('passwordGroup.password')?.touched || userForm.get('passwordGroup.password')?.dirty} && !userForm.get('passwordGroup.password')?.valid? 'is-invalid' : ''" />
+                            <span class="invalid-feedback">
+                                <span *ngIf="userForm.get('passwordGroup.password')?.errors?.['required']">
+                                    Please enter your password
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="form-group sm:col-span-3">
+                        <label for="confirmPassword" class="block text-sm font-medium leading-6 text-gray-900">Confirm
+                            Password</label>
+                        <div class="mt-2">
+                            <input id="confirmPassword" type="confirmPassword" autocomplete="confirmPassword"
+                                placeholder="Confirm Password (required)" formControlName="ConfirmPassword"
+                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                                [ngClass]="{'is-invalid': userForm.get('passwordGroup.confirmPassword')?.errors? 'is-invalid' :
+                            ((userForm.get('passwordGroup.confirmPassword')?.touched ||
+                            userForm.get('passwordGroup.confirmPassword')?.dirty)&&
+                            !userForm.get('passwordGroup.confirmPassword')?.valid)? 'is-invalid':''}" />
+                            <span class="invalid-feedback">
+                                <span *ngIf="userForm.get('passwordGroup.confirmPassword')?.errors?.['required']">
+                                    Please enter your email address
+                                </span>
+                                <span *ngIf="userForm.get('passwordGroup.confirmPassword')?.errors?.['match']">
+                                    The Confirmation does not match the email address.
+                                </span>
                             </span>
                         </div>
                     </div>
@@ -65,7 +107,8 @@
                         <label for="street-address" class="block text-sm font-medium leading-6 text-gray-900">Street
                             address</label>
                         <div class="mt-2">
-                            <input type="text" name="street-address" id="street-address" autocomplete="street-address"
+                            <input type="text" formControlName="streetaddress" id="street-address"
+                                autocomplete="street-address"
                                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                         </div>
                     </div>
@@ -73,7 +116,7 @@
                     <div class="form-group sm:col-span-2 sm:col-start-1">
                         <label for="city" class="block text-sm font-medium leading-6 text-gray-900">City</label>
                         <div class="mt-2">
-                            <input type="text" name="city" id="city" autocomplete="address-level2"
+                            <input type="text" formControlName="city" id="city" autocomplete="address-level2"
                                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                         </div>
                     </div>
@@ -82,7 +125,7 @@
                         <label for="region" class="block text-sm font-medium leading-6 text-gray-900">State /
                             Province</label>
                         <div class="mt-2">
-                            <input type="text" name="region" id="region" autocomplete="address-level1"
+                            <input type="text" formControlName="region" id="region" autocomplete="address-level1"
                                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                         </div>
                     </div>
@@ -91,7 +134,7 @@
                         <label for="postal-code" class="block text-sm font-medium leading-6 text-gray-900">ZIP / Postal
                             code</label>
                         <div class="mt-2">
-                            <input type="text" name="postal-code" id="postal-code" autocomplete="postal-code"
+                            <input type="text" formControlName="postalcode" id="postal-code" autocomplete="postal-code"
                                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                         </div>
                     </div>
