--- a/src/app/user-signup/user-signup.component.html
+++ b/src/app/user-signup/user-signup.component.html
@@ -145,7 +145,8 @@
                     <button type="submit"
                         class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
                         [title]="userForm.valid ? 'Save your entered data' : 'Disabled until the form data is valid'"
-                        [disabled]="!userForm.valid">Save</button>
+                        [disabled]="!userForm.valid"
+                        (click)="save()">Save</button>
                 </div>
 
             </div>
