--- a/src/app/user-signup/user-signup.component.html
+++ b/src/app/user-signup/user-signup.component.html
@@ -67,21 +67,21 @@
                     </div>
 
 
-                    <div class="form-group sm:col-span-3">
+                    <div class="form-group sm:col-span-4">
                         <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Password</label>
                         <div class="mt-2">
                             <input id="password" type="password" autocomplete="password"
                                 placeholder="Password (required)" formControlName="password"
                                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-                                [ngClass]="{'is-invalid': userForm.get('passwordGroup.password')?.touched || userForm.get('passwordGroup.password')?.dirty} && !userForm.get('passwordGroup.password')?.valid? 'is-invalid' : ''" />
+                                [ngClass]="{'is-invalid': (userForm.get('password')?.touched || userForm.get('password')?.dirty) && !userForm.get('password')?.valid }" />
                             <span class="invalid-feedback">
-                                <span *ngIf="userForm.get('passwordGroup.password')?.errors?.['required']">
+                                <span *ngIf="userForm.get('password')?.errors?.['required']">
                                     Please enter your password
                                 </span>
                             </span>
                         </div>
                     </div>
-                    <div class="form-group sm:col-span-3">
+                    <!-- <div class="form-group sm:col-span-3">
                         <label for="confirmPassword" class="block text-sm font-medium leading-6 text-gray-900">Confirm
                             Password</label>
                         <div class="mt-2">
@@ -94,14 +94,14 @@
                             !userForm.get('passwordGroup.confirmPassword')?.valid)? 'is-invalid':''}" />
                             <span class="invalid-feedback">
                                 <span *ngIf="userForm.get('passwordGroup.confirmPassword')?.errors?.['required']">
-                                    Please enter your email address
+                                    Please enter your Password
                                 </span>
                                 <span *ngIf="userForm.get('passwordGroup.confirmPassword')?.errors?.['match']">
-                                    The Confirmation does not match the email address.
+                                    The Confirmation does not match the password.
                                 </span>
                             </span>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="form-group col-span-full">
                         <label for="street-address" class="block text-sm font-medium leading-6 text-gray-900">Street
@@ -145,7 +145,6 @@
                     <button type="submit"
                         class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
                         [title]="userForm.valid ? 'Save your entered data' : 'Disabled until the form data is valid'"
-                        [disabled]="!userForm.valid"
                         (click)="save()">Save</button>
                 </div>
 
