--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="card-body">
+<!-- <div class="card-body">
   <form novalidate (ngSubmit)="loginProcess()" [formGroup]="loginForm">
 <div class="form-group flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
@@ -46,4 +46,4 @@
   </div>
 </div>
 </form>
-</div>
+</div> -->
