--- a/src/app/user-signup/user-signup.component.html
+++ b/src/app/user-signup/user-signup.component.html
@@ -1,4 +1,4 @@
-<div class="card-body">
+<!-- <div class="card-body">
     <form novalidate (ngSubmit)="save()" [formGroup]="userForm">
 
         <body class="form-group flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
@@ -153,4 +153,4 @@
             </div>
         </body>
     </form>
-</div>
+</div> -->
