--- a/src/app/home/user-manage/update-employee/update-employee.component.html
+++ b/src/app/home/user-manage/update-employee/update-employee.component.html
@@ -6,23 +6,25 @@
         </div>
     </div>
     <div class="mx-auto max-w-2xl text-center">
-        <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">UPDATE a EMPLOYEE</h2>
+        <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">UPDATE a Member</h2>
         <p class="mt-2 text-lg leading-8 text-gray-600">Give a Correct Details of a Employee</p>
     </div>
     <form action="#" method="POST" class="mx-auto mt-16 max-w-xl sm:mt-20">
         <div class="form-group grid grid-cols-1 gap-x-20 gap-y-6 sm:grid-col-2">
             <div>
-                <label for="employeefirstname" class="block text-sm font-semibold leading-6 text-gray-900">Employee Fist name</label>
+                <label for="firstName" class="block text-sm font-semibold leading-6 text-gray-900">Employee Fist
+                    name</label>
                 <div class="form-group mt-2.5">
-                    <input type="text" [(ngModel)]="employeedata.employeefirstname" name="employeefirstname" id="employeefirstname"
+                    <input type="text" [(ngModel)]="employeedata.firstName" name="firstName" id="firstName"
                         autocomplete="given-name"
                         class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
             </div>
             <div>
-                <label for="employeelastname" class="block text-sm font-semibold leading-6 text-gray-900">Employee last name</label>
+                <label for="lastName" class="block text-sm font-semibold leading-6 text-gray-900">Employee last
+                    name</label>
                 <div class="form-group mt-2.5">
-                    <input type="text" [(ngModel)]="employeedata.employeelastname" name="employeelastname" id="employeelastname"
+                    <input type="text" [(ngModel)]="employeedata.lastName" name="lastName" id="lastName"
                         autocomplete="given-name"
                         class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
@@ -30,7 +32,8 @@
             <div class="form-group sm:col-span-2">
                 <label for="Position" class="block text-sm font-semibold leading-6 text-gray-900">Position</label>
                 <div class="form-group mt-2.5">
-                    <input type="text" [(ngModel)]="employeedata.Position" name="Position" id="Position" autocomplete="family-name"
+                    <input type="text" [(ngModel)]="employeedata.Position" name="Position" id="Position"
+                        autocomplete="family-name"
                         class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
             </div>
@@ -48,29 +51,66 @@
                         class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
             </div>
+
+            <div class="form-group sm:col-span-2">
+                <label for="password" class="block text-sm font-semibold leading-6 text-gray-900">password</label>
+                <div class="form-group mt-2.5">
+                    <input type="password" [(ngModel)]="employeedata.password" name="password" id="password"
+                        autocomplete="new-password"
+                        class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+            </div>
+
             <div class="form-group sm:col-span-2">
                 <label for="phonenumber" class="block text-sm font-semibold leading-6 text-gray-900">Contact
                     number</label>
                 <div class="form-group relative mt-2.5">
-                    <input type="tel" [(ngModel)]="employeedata.phonenumber" name="phonenumber" id="phonenumber" autocomplete="tel"
+                    <input type="tel" [(ngModel)]="employeedata.phonenumber" name="phonenumber" id="phonenumber"
+                        autocomplete="tel"
                         class="block w-full rounded-md border-0 px-3.5 py-2 pl-20 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
             </div>
             <div class="form-group flex items-center">
                 <label class="mr-2 text-gray-700">Date of Birth:</label>
-                <input type="date" [(ngModel)]="employeedata.dob" class="border border-gray-300 px-2 py-1 rounded-md" name="dob">
+                <input type="date" formControlName="date" [(ngModel)]="employeedata.dob"
+                    class="border border-gray-300 px-2 py-1 rounded-md" name="dob">
             </div>
 
-            <body>
 
-            </body>
+
+            <div class="form-group sm:col-span-2">
+                <label for="role" class="block text-sm font-semibold leading-6 text-gray-900">Create a Role</label>
+                <div class="form-group relative mt-2.5 ">
+                    <div class=" form-group absolute inset-y-0 left-0 flex items-center">
+                        <div
+                            class="h-full rounded-md border-0 bg-transparent bg-none py-0 pl-4 pr-9 text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm">
+                            <select [(ngModel)]="employeedata.role" id="role" name="role"
+                                aria-placeholder="selected access you want"
+                                class="block w-full rounded-md border-0 px-3.5 py-2 pl-20 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                                <option value="vendor">Vendor</option>
+                                <option value="employee">Employee</option>
+                                <option value="admin">Admin</option>
+                            </select>
+                        </div>
+                        <svg class="pointer-events-none absolute right-3 top-0 h-full w-5 text-gray-400"
+                            viewBox="0 0 20 20" fill="currentColor">
+                            <path fill-rule="evenodd"
+                                d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z"
+                                clip-rule="evenodd" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+
         </div>
-        <div class="mt-2.5 grid grid-cols-2 gap-x-10 gap-y-6 sm:grid-col-2 ">
+        <div class="mt-16 grid grid-cols-2 gap-x-10 gap-y-6 sm:grid-col-2 ">
             <button type="submit" class="block w-full rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline 
-                focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" (click)="Updatemployee()">UPDATE EMPLOYEE</button>
-        
+                focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+                (click)="Updatemployee()">UPDATE MEMBER</button>
+
             <button type="submit" class="block w-full rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline 
-                focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" routerLink="/home">BACK TO HOME</button>
+                focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+                routerLink="/home">BACK TO HOME</button>
         </div>
     </form>
 </div>
