--- a/src/app/newsignup/newsignup.component.html
+++ b/src/app/newsignup/newsignup.component.html
@@ -1,8 +1,8 @@
-<p>newsignup works!</p>
 <div class="card-body">
     <form novalidate (ngSubmit)="save()" [formGroup]="userForm">
 
         <body class="form-group flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+
             <div class="sm:mx-auto sm:w-full sm:max-w-sm">
                 <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
                     alt="Your Company" />
@@ -10,145 +10,100 @@
                     Information</h2>
 
                 <div class="form-group mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-                    <div class="sm:col-span-3">
+                    <div class="sm:col-span-6">
                         <label for="firstName" class="block text-sm font-medium leading-6 text-gray-900">First
                             name</label>
                         <div class="mt-2">
-                            <input type="text" formControlname="firstName" id="firstName" autocomplete="given-name"
-                                placeholder="First Name (required)"
-                                class="form-control block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-                                [ngClass]="{'is-invalid': (userForm.get('firstName')?.touched || userForm.get('firstName')?.dirty) && !userForm.get('firstName')?.valid }" />
-                            <span class="invalid-feedback">
-                                <span *ngIf="userForm.get('firstName')?.errors?.['required']">
-                                    Please enter your first name.
-                                </span>
-                                <span *ngIf="userForm.get('firstName')?.errors?.['minlength']">
-                                    The first name must be longer than 3 characters.
-                                </span>
-                            </span>
+                            <input type="text" formControlName="firstName" id="firstName" autocomplete="given-name"
+                                name="firstName" placeholder="First Name (required)"
+                                class="form-control block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                         </div>
                     </div>
 
-                    <div class="form-group col-span-3">
+                    <div class="form-group col-span-6">
                         <label for="lastName" class="block text-sm font-medium leading-6 text-gray-900">Last
                             name</label>
                         <div class="mt-2">
-                            <input type="text" formControlname="lastName" id="last-name" autocomplete="family-name"
-                                placeholder="Last Name (required)"
-                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-                                [ngClass]="{'is-invalid': (userForm.get('lastName')?.touched || userForm.get('lastName')?.dirty) && !userForm.get('lastName')?.valid }" />
-                            <span class="invalid-feedback">
-                                <span *ngIf="userForm.get('lastName')?.errors?.['required']">
-                                    Please enter your first name.
-                                </span>
-                                <span *ngIf="userForm.get('lastName')?.errors?.['minlength']">
-                                    The first name must be longer than 3 characters.
-                                </span>
-                            </span>
+                            <input type="text" formControlName="lastName" id="lastName" autocomplete="family-name"
+                                name="lastName" placeholder="Last Name (required)"
+                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                         </div>
                     </div>
 
-                    <div class="form-group sm:col-span-4">
+                    <div class="form-group sm:col-span-12">
                         <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email
                             address</label>
                         <div class="mt-2">
                             <input id="email" type="email" autocomplete="email" placeholder="Email (required)"
                                 formControlName="email"
-                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-                                [ngClass]="{'is-invalid':  (userForm.get('email')?.touched || userForm.get('email')?.dirty) && !userForm.get('email')?.valid }" />
-                            <span class="invalid-feedback">
-                                <span *ngIf="userForm.get('email')?.errors?.['required']">
-                                    Please enter your Email address
-                                </span>
-                                <span *ngIf="userForm.get('email')?.errors?.['email']">
-                                    Please enter a vaild Email address
-                                </span>
-                            </span>
+                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                         </div>
                     </div>
 
 
-                    <div class="form-group sm:col-span-4">
+                    <div class="form-group sm:col-span-12">
                         <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Password</label>
                         <div class="mt-2">
                             <input id="password" type="password" autocomplete="password"
                                 placeholder="Password (required)" formControlName="password"
-                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-                                [ngClass]="{'is-invalid': (userForm.get('password')?.touched || userForm.get('password')?.dirty) && !userForm.get('password')?.valid }" />
-                            <span class="invalid-feedback">
-                                <span *ngIf="userForm.get('password')?.errors?.['required']">
-                                    Please enter your password
-                                </span>
-                            </span>
-                        </div>
-                    </div>
-                    <!-- <div class="form-group sm:col-span-3">
-                        <label for="confirmPassword" class="block text-sm font-medium leading-6 text-gray-900">Confirm
-                            Password</label>
-                        <div class="mt-2">
-                            <input id="confirmPassword" type="confirmPassword" autocomplete="confirmPassword"
-                                placeholder="Confirm Password (required)" formControlName="ConfirmPassword"
-                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-                                [ngClass]="{'is-invalid': userForm.get('passwordGroup.confirmPassword')?.errors? 'is-invalid' :
-                            ((userForm.get('passwordGroup.confirmPassword')?.touched ||
-                            userForm.get('passwordGroup.confirmPassword')?.dirty)&&
-                            !userForm.get('passwordGroup.confirmPassword')?.valid)? 'is-invalid':''}" />
-                            <span class="invalid-feedback">
-                                <span *ngIf="userForm.get('passwordGroup.confirmPassword')?.errors?.['required']">
-                                    Please enter your Password
-                                </span>
-                                <span *ngIf="userForm.get('passwordGroup.confirmPassword')?.errors?.['match']">
-                                    The Confirmation does not match the password.
-                                </span>
-                            </span>
-                        </div>
-                    </div> -->
-
-                    <div class="form-group col-span-full">
-                        <label for="street-address" class="block text-sm font-medium leading-6 text-gray-900">Street
-                            address</label>
-                        <div class="mt-2">
-                            <input type="text" formControlName="streetaddress" id="street-address"
-                                autocomplete="street-address"
                                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                         </div>
                     </div>
-
-                    <div class="form-group sm:col-span-2 sm:col-start-1">
-                        <label for="city" class="block text-sm font-medium leading-6 text-gray-900">City</label>
-                        <div class="mt-2">
-                            <input type="text" formControlName="city" id="city" autocomplete="address-level2"
-                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                        </div>
-                    </div>
-
-                    <div class="form-group sm:col-span-2">
-                        <label for="region" class="block text-sm font-medium leading-6 text-gray-900">State /
-                            Province</label>
-                        <div class="mt-2">
-                            <input type="text" formControlName="region" id="region" autocomplete="address-level1"
-                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                        </div>
-                    </div>
-
-                    <div class="form-group sm:col-span-2">
-                        <label for="postal-code" class="block text-sm font-medium leading-6 text-gray-900">ZIP / Postal
-                            code</label>
-                        <div class="mt-2">
-                            <input type="text" formControlName="postalcode" id="postal-code" autocomplete="postal-code"
-                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                        </div>
-                    </div>
-                    
                 </div>
-                <div class="form-group mt-6 flex items-center justify-end gap-x-6">
+
+                <div class="form-group sm:col-span-2">
+                    <label for="phone-number" class="block text-sm font-semibold leading-6 text-gray-900">Contact
+                        number</label>
+                    <div class="form-group relative mt-2.5">
+                        <div class=" form-group absolute inset-y-0 left-0 flex items-center">
+                            <label for="country" class="sr-only">Country</label>
+                            <select id="country" formControlName="country"
+                                class="h-full rounded-md border-0 bg-transparent bg-none py-0 pl-4 pr-9 text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm">
+                                <option>US</option>
+                                <option>CA</option>
+                                <option>EU</option>
+                                <option>SL</option>
+                            </select>
+                            <svg class="pointer-events-none absolute right-3 top-0 h-full w-5 text-gray-400"
+                                viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd"
+                                    d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </div>
+                        <input type="tel" formControlName="phonenumber" id="phonenumber" autocomplete="tel"
+                            class="block w-full rounded-md border-0 px-3.5 py-2 pl-20 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    </div>
+                </div>
+
+                <div class="form-group flex items-center">
+                    <label class="mr-2 text-gray-700">Date of Birth:</label>
+                    <input type="date" class="border border-gray-300 px-2 py-1 rounded-md" formControlName="dob">
+                </div>
+
+
+
+                <div class="sm:col-span-6">
+                    <div class="mt-2">
+                    <label for="role" class="block text-sm font-medium leading-6 text-gray-900">i'm </label>
+                    <div class="mt-2">
+                    <select class="form-select" aria-placeholder="selected access u want"  formControlName="role" id="role" name="role"class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">">
+                        <Option value="vendor">Vendor</Option>
+                    </select>
+                    </div>
+                    </div>
+                </div>
+
+
+                <div class="pt-1 mb-3 text-center">
                     <button type="button" class="text-sm font-semibold leading-6 text-gray-900"
                         (click)="cancelProcess()">Cancel</button>
-                    <button type="submit"
-                        class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+                </div>
+
+                <div class="pt-1 mb-3 text-center">
+                    <button type="submit" class="btn btn-dark"
                         [title]="userForm.valid ? 'Save your entered data' : 'Disabled until the form data is valid'"
-                        (click)="save()"
-                        [disabled]="this.userForm.invalid">Save</button>
+                        (click)="save()">Save</button>
                 </div>
 
             </div>
