--- a/src/app/home/product-Manage/add-product/add-product.component.html
+++ b/src/app/home/product-Manage/add-product/add-product.component.html
@@ -34,6 +34,30 @@
             class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
         </div>
       </div>
+
+
+      <div class="form-group sm:col-span-2">
+        <label for="productprice" class="block text-sm font-semibold leading-6 text-gray-900">Product Price</label>
+        <div class="form-group relative mt-2.5">
+            <div class=" form-group absolute inset-y-0 left-0 flex items-center">
+                <select id="currency" formControlName="currency"
+                    class="h-full rounded-md border-0 bg-transparent bg-none py-0 pl-4 pr-9 text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm">
+                    <option>$</option>
+                    <option>€</option>
+                    <option>Lk</option>
+                </select>
+                <svg class="pointer-events-none absolute right-3 top-0 h-full w-5 text-gray-400" viewBox="0 0 20 20"
+                    fill="currentColor" aria-hidden="true">
+                    <path fill-rule="evenodd"
+                        d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z"
+                        clip-rule="evenodd" />
+                </svg>
+            </div>
+            <input type="price" formControlName="productprice" id="productprice" autocomplete="price"
+                class="block w-full rounded-md border-0 px-3.5 py-2 pl-20 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+        </div>
+    </div>
+
       <div class="form-group sm:col-span-2">
         <label for="email" class="block text-sm font-semibold leading-6 text-gray-900">Contact Email</label>
         <div class="form-group mt-2.5">
@@ -71,7 +95,7 @@
             <form class="flex flex-col items-center justify-center px-4 py-6 bg-gray-200 rounded-md shadow-md">
               <h2 class="text-2xl font-semibold mb-4">Upload Picture</h2>
               <div class="form-group mb-4">
-                <input type="file" class="hidden" id="pictureInput" name="picture">
+                <input type="file" class="hidden" id="pictureInput" name="picture" (change)="onFileSelected($event)">
                 <label for="pictureInput"
                   class="cursor-pointer flex items-center justify-center px-4 py-2 bg-blue-500 text-white rounded-md">
                   <svg class="w-6 h-6 mr-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -84,12 +108,22 @@
               </div>
               <p class="text-gray-500 text-sm">Supported formats: JPG, PNG, GIF. Maximum file size: 5MB</p>
               <div class="form-group mt-4">
-                <button type="submit"
-                  class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 focus:bg-blue-600">Upload</button>
+                <button type="button"
+                  class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 focus:bg-blue-600"
+                  (click)="uploadFile()">Upload</button>
               </div>
             </form>
           </div>
         </div>
+
+        <div class="form-group sm:col-span-2">
+          <label for="photourl" class="block text-sm font-semibold leading-6 text-gray-900">Photo Url</label>
+          <div class="form-group mt-2.5">
+            <input type="photourl" formControlName="photourl" id="photourl" autocomplete="photoUrl" placeholder="Url"
+              class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+          </div>
+        </div>
+
       </body>
     </div>
     <div class="mt-10">
