--- a/src/app/home/product-Manage/product-edit/product-edit.component.html
+++ b/src/app/home/product-Manage/product-edit/product-edit.component.html
@@ -33,6 +33,31 @@
               class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
           </div>
         </div>
+
+
+        <div class="form-group sm:col-span-2">
+          <label for="productprice" class="block text-sm font-semibold leading-6 text-gray-900">Product Price</label>
+          <div class="form-group relative mt-2.5">
+            <div class=" form-group absolute inset-y-0 left-0 flex items-center">
+              <select id="currency" [(ngModel)]="productData.currency" name="currency"
+                class="h-full rounded-md border-0 bg-transparent bg-none py-0 pl-4 pr-9 text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm">
+                <option>$</option>
+                <option>€</option>
+                <option>Lk</option>
+              </select>
+              <svg class="pointer-events-none absolute right-3 top-0 h-full w-5 text-gray-400" viewBox="0 0 20 20"
+                fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd"
+                  d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z"
+                  clip-rule="evenodd" />
+              </svg>
+            </div>
+            <input type="price" [(ngModel)]="productData.productprice" id="productprice" autocomplete="tel" name="productprice"
+              class="block w-full rounded-md border-0 px-3.5 py-2 pl-20 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+          </div>
+        </div>
+
+
         <div class="form-group sm:col-span-2">
           <label for="email" class="block text-sm font-semibold leading-6 text-gray-900">Contact Email</label>
           <div class="form-group mt-2.5">
